--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
         "optimist": "0.5.x",
         "musicmetadata": "~0.2.x",
         "winston": "~0.7.x",
-        "mpd": "~1.0.1",
-        "webkit-devtools-agent": "0.2.x"
+        "mpd": "~1.0.1"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "memwatch": "0.2.x"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js"
