--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
         "optimist": "0.5.x",
         "musicmetadata": "~0.2.x",
         "winston": "~0.7.x",
-        "mpd": "~1.0.1"
+        "mpd": "~1.0.1",
+        "memwatch": "0.2.x"
     },
     "devDependencies": {
-        "memwatch": "0.2.x"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
