cetaed player interface

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "songSelectionGap": 5,
     "maxSongLimitPerIP": 15,
-    "playerClient": "mplayer",
+    "playerClient": "mpd",
     "mediaFolder": "/media/",
     "port": 8085,
     "adminlist": ["127.0.0.1"]
